use devenv direnv with php 8.3 on NixOS
add composer ddev
adjust .gitignore
phpcs and phpstan binaries in global .composer

install on NixOS:
  cp .envrc.example .envrc
  direnv allow

other systems: just ignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 /resources/lang/*/messages.php
 !/resources/lang/en-US/messages.php
 
+.devenv
+.direnv
+.envrc
+
+.idea/
+
 /robots.txt
 
 /tests/clover.xml
