--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
             "php": "8.3.0"
         },
         "sort-packages": true,
-        "process-timeout": 3600
+        "process-timeout": 3600,
+        "allow-plugins": {
+            "magicsunday/webtrees-module-installer-plugin": true
+        }
     },
     "require": {
         "php": "8.3 - 8.4",
@@ -55,6 +58,8 @@
         "league/flysystem": "3.29.1",
         "league/flysystem-path-prefixing": "3.28.0",
         "league/flysystem-ziparchive": "3.29.0",
+        "magicsunday/webtrees-module-base": "^1.0",
+        "magicsunday/webtrees-module-installer-plugin": "^1.5",
         "middlewares/client-ip": "2.0.1",
         "mlocati/ip-lib": "1.20.0",
         "nesbot/carbon": "3.8.4",
